--- a/services/job/Makefile
+++ b/services/job/Makefile
@@ -1,19 +1,28 @@
-BINARY_NAME=job-service-binary
-DOCKER_IMAGE=job-service
+BINARY_NAME=job-binary
+DOCKER_IMAGE=job
 
-.PHONY: all build test containerize clean
+.PHONY: all build test containerize clean integrationcheck deployment
 
-all: build test clean
+integrationcheck:
+	@$(MAKE) build && \
+	$(MAKE) test ; \
+	$(MAKE) clean
+	
+deployment:
+	@$(MAKE) build && \
+	$(MAKE) test && \
+	$(MAKE) containerize ; \
+	$(MAKE) clean
 
 build:
 	go build -o $(BINARY_NAME) .
 
 test:
-	go test ./... -cover
+	go test ./...
 
 containerize:
 	docker build -t $(DOCKER_IMAGE) .
 
 clean:
 	rm -f $(BINARY_NAME)
-	-docker image rm $(DOCKER_IMAGE):latest || true
+
