--- a/services/job-scheduler/Makefile
+++ b/services/job-scheduler/Makefile
@@ -1,4 +1,27 @@
-.PHONY: run test fmt docker-up docker-down docker-build clean
+BINARY_NAME=job-scheduler-binary
+DOCKER_IMAGE=job-scheduler
+
+.PHONY: all build containerize test run docker-up docker-down clean integrationcheck deployment
+
+integrationcheck:
+	@$(MAKE) build && \
+	$(MAKE) test ; \
+	$(MAKE) clean
+	
+deployment:
+	@$(MAKE) build && \
+	$(MAKE) test && \
+	$(MAKE) containerize ; \
+	$(MAKE) clean
+
+build:
+	go build -o $(BINARY_NAME) .
+
+test:
+	go test ./...
+
+containerize:
+	docker build -t $(DOCKER_IMAGE) .
 
 run:
 	WORKER_REGISTRY="http://localhost:8080" JOB_SERVICE="http://localhost:8080" CARBON_INTENSITY_PROVIDER="http://localhost:8080" go run main.go
@@ -9,5 +32,13 @@ docker-up:
 docker-down:
 	docker compose down
 
-test:
-	go test ./... -cover
+clean:
+	rm -f $(BINARY_NAME)
+
+
+
+
+
+
+
+
