--- a/services/worker-registry/Makefile
+++ b/services/worker-registry/Makefile
@@ -1,4 +1,27 @@
-.PHONY: run test fmt docker-up docker-down docker-build clean
+BINARY_NAME=worker-registry-binary
+DOCKER_IMAGE=worker-registry
+
+.PHONY: all build test containerize run fmt docker-up docker-down clean integrationcheck deployment
+
+integrationcheck:
+	@$(MAKE) build && \
+	$(MAKE) test ; \
+	$(MAKE) clean
+
+deployment:
+	@$(MAKE) build && \
+	$(MAKE) test && \
+	$(MAKE) containerize ; \
+	$(MAKE) clean
+
+build:
+	go build -o $(BINARY_NAME) .
+
+test:
+	go test ./...
+
+containerize:
+	docker build -t $(DOCKER_IMAGE) .
 
 run:
 	go run main.go
@@ -9,5 +32,5 @@ docker-up:
 docker-down:
 	docker compose down
 
-test:
-	go test ./... -cover
+clean:
+	rm -f $(BINARY_NAME)
